--- a/angular-state-management/index.html
+++ b/angular-state-management/index.html
@@ -120,6 +120,9 @@
 				<section>
 					<img src="img/redux.png" />
 				</section>
+				<section>
+					<img src="img/unidirectional.svg" />
+				</section>
 			</section>
 
 			<!-- The store and view, think of as database -->
@@ -144,6 +147,7 @@
 				correct tussen states te switchen.
 			</section>
 
+			<section>welke van onze problemen hebben we tot nu toe opgelost hiermee? tegen welke prijs?</section>
 
 
 			<!-- router state synchroniseren: maak de router single source of truth + router-store -->
